# nginx-http-stats

./: LICENSE  README.md  TODO  config.yml  pyproject.toml
examples/: config.yml  nginx-http-stats.service
nginx_http_stats/: cli.py  counter.py  server.py  tail.py  types.py
