[tool.poetry]
name = "nginx-http-stats"
version = "0.1.0"
description = ""
authors = ["Sven Ulland <sven.ulland+github@gmail.com>"]
readme = "README.md"
packages = [{include = "nginx_http_stats"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
